parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    COMILLASDOBLES
    COMILLASSIMPLES
    CORCHETEABRE
    CORCHETECIERRA
    DO
    ELSE
    EXPORT
    FINAL
    FLECHA
    FOR
    IF
    IN
    IS
    LIST
    NEW
    NOT
    NULL
    PRINT
    REQUIRED
    SET
    SUPER
    THIS
    WHILE

Grammar

Rule 0     S' -> funcion
Rule 1     funcion -> tipoDato VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque RETURN valores PUNTOCOMA LLAVECIERRA
Rule 2     funcion -> VOID VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque LLAVECIERRA
Rule 3     funcion -> VOID VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque RETURN PUNTOCOMA LLAVECIERRA
Rule 4     parametros -> tipoDato VARIABLE
Rule 5     parametros -> parametros COMA tipoDato VARIABLE
Rule 6     parametros -> empty
Rule 7     bloque -> expresion
Rule 8     bloque -> bloque expresion
Rule 9     bloque -> empty
Rule 10    expresion -> mapa PUNTOCOMA
Rule 11    expresion -> mapaFunciones PUNTOCOMA
Rule 12    expresion -> asignacion PUNTOCOMA
Rule 13    import -> IMPORT CADENA PUNTOCOMA
Rule 14    asignacion -> VARIABLE operadores_asignacion valores
Rule 15    asignacion -> tipoDato VARIABLE IGUAL valores
Rule 16    asignacion -> VARIABLE IGUAL comparacion
Rule 17    asignacion -> BOOL VARIABLE IGUAL comparacion
Rule 18    asignacion -> VARIABLE operadores_asignacion operacion_aritmetica
Rule 19    asignacion -> tipoDato VARIABLE IGUAL operacion_aritmetica
Rule 20    operacion_aritmetica -> valores operadores_aritmeticos valores
Rule 21    operacion_aritmetica -> operacion_aritmetica operadores_aritmeticos valores
Rule 22    operadores_aritmeticos -> SUMA
Rule 23    operadores_aritmeticos -> RESTA
Rule 24    operadores_aritmeticos -> MULTIPLICACION
Rule 25    operadores_aritmeticos -> DIVISION
Rule 26    operadores_aritmeticos -> DIVENTERA
Rule 27    operadores_aritmeticos -> RESIDUO
Rule 28    operadores_asignacion -> IGUAL
Rule 29    operadores_asignacion -> ASIGNACIONAUMENTADA
Rule 30    operadores_asignacion -> ASIGNACIONDISMINUIDA
Rule 31    comparacion -> valores comparador valores
Rule 32    comparacion -> comparacion comparador valores
Rule 33    comparador -> MENORQUE
Rule 34    comparador -> MAYORQUE
Rule 35    comparador -> IGUALQUE
Rule 36    comparador -> DIFERENTEQUE
Rule 37    mapa -> MAP MENORQUE tipoDato COMA tipoDato MAYORQUE VARIABLE IGUAL creacionMapa
Rule 38    mapa -> mapaFunciones
Rule 39    mapaFunciones -> mapa PUNTO VARIABLE LPAREN RPAREN
Rule 40    mapaFunciones -> mapa PUNTO VARIABLE LPAREN valores
Rule 41    mapaFunciones -> VARIABLE PUNTO VARIABLE LPAREN RPAREN
Rule 42    mapaFunciones -> VARIABLE PUNTO VARIABLE LPAREN valores RPAREN
Rule 43    creacionMapa -> LLAVEABRE paresClaveValor LLAVECIERRA
Rule 44    creacionMapa -> VARIABLE
Rule 45    paresClaveValor -> valores DOSPUNTOS valores
Rule 46    paresClaveValor -> paresClaveValor COMA valores DOSPUNTOS valores
Rule 47    valores -> VARIABLE
Rule 48    valores -> NUMERO
Rule 49    valores -> CADENA
Rule 50    valores -> booleano
Rule 51    booleano -> TRUE
Rule 52    booleano -> FALSE
Rule 53    tipoDato -> STRING
Rule 54    tipoDato -> INT
Rule 55    tipoDato -> BOOL
Rule 56    tipoDato -> DOUBLE
Rule 57    tipoDato -> DYNAMIC
Rule 58    tipoDato -> VAR
Rule 59    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 
ASIGNACIONAUMENTADA  : 29
ASIGNACIONDISMINUIDA : 30
BOOL                 : 17 55
CADENA               : 13 49
COMA                 : 5 37 46
COMILLASDOBLES       : 
COMILLASSIMPLES      : 
CORCHETEABRE         : 
CORCHETECIERRA       : 
DIFERENTEQUE         : 36
DIVENTERA            : 26
DIVISION             : 25
DO                   : 
DOSPUNTOS            : 45 46
DOUBLE               : 56
DYNAMIC              : 57
ELSE                 : 
EXPORT               : 
FALSE                : 52
FINAL                : 
FLECHA               : 
FOR                  : 
IF                   : 
IGUAL                : 15 16 17 19 28 37
IGUALQUE             : 35
IMPORT               : 13
IN                   : 
INT                  : 54
IS                   : 
LIST                 : 
LLAVEABRE            : 1 2 3 43
LLAVECIERRA          : 1 2 3 43
LPAREN               : 1 2 3 39 40 41 42
MAP                  : 37
MAYORQUE             : 34 37
MENORQUE             : 33 37
MULTIPLICACION       : 24
NEW                  : 
NOT                  : 
NULL                 : 
NUMERO               : 48
PRINT                : 
PUNTO                : 39 40 41 42
PUNTOCOMA            : 1 3 10 11 12 13
REQUIRED             : 
RESIDUO              : 27
RESTA                : 23
RETURN               : 1 3
RPAREN               : 1 2 3 39 41 42
SET                  : 
STRING               : 53
SUMA                 : 22
SUPER                : 
THIS                 : 
TRUE                 : 51
VAR                  : 58
VARIABLE             : 1 2 3 4 5 14 15 16 17 18 19 37 39 40 41 41 42 42 44 47
VOID                 : 2 3
WHILE                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 12
bloque               : 1 2 3 8
booleano             : 50
comparacion          : 16 17 32
comparador           : 31 32
creacionMapa         : 37
empty                : 6 9
expresion            : 7 8
funcion              : 0
import               : 
mapa                 : 10 39 40
mapaFunciones        : 11 38
operacion_aritmetica : 18 19 21
operadores_aritmeticos : 20 21
operadores_asignacion : 14 18
parametros           : 1 2 3 5
paresClaveValor      : 43 46
tipoDato             : 1 4 5 15 19 37 37
valores              : 1 14 15 20 20 21 31 31 32 40 42 45 45 46 46

Parsing method: LALR

state 0

    (0) S' -> . funcion
    (1) funcion -> . tipoDato VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque RETURN valores PUNTOCOMA LLAVECIERRA
    (2) funcion -> . VOID VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque LLAVECIERRA
    (3) funcion -> . VOID VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque RETURN PUNTOCOMA LLAVECIERRA
    (53) tipoDato -> . STRING
    (54) tipoDato -> . INT
    (55) tipoDato -> . BOOL
    (56) tipoDato -> . DOUBLE
    (57) tipoDato -> . DYNAMIC
    (58) tipoDato -> . VAR

    VOID            shift and go to state 3
    STRING          shift and go to state 4
    INT             shift and go to state 5
    BOOL            shift and go to state 6
    DOUBLE          shift and go to state 7
    DYNAMIC         shift and go to state 8
    VAR             shift and go to state 9

    funcion                        shift and go to state 1
    tipoDato                       shift and go to state 2

state 1

    (0) S' -> funcion .



state 2

    (1) funcion -> tipoDato . VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque RETURN valores PUNTOCOMA LLAVECIERRA

    VARIABLE        shift and go to state 10


state 3

    (2) funcion -> VOID . VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque LLAVECIERRA
    (3) funcion -> VOID . VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque RETURN PUNTOCOMA LLAVECIERRA

    VARIABLE        shift and go to state 11


state 4

    (53) tipoDato -> STRING .

    VARIABLE        reduce using rule 53 (tipoDato -> STRING .)
    COMA            reduce using rule 53 (tipoDato -> STRING .)
    MAYORQUE        reduce using rule 53 (tipoDato -> STRING .)


state 5

    (54) tipoDato -> INT .

    VARIABLE        reduce using rule 54 (tipoDato -> INT .)
    COMA            reduce using rule 54 (tipoDato -> INT .)
    MAYORQUE        reduce using rule 54 (tipoDato -> INT .)


state 6

    (55) tipoDato -> BOOL .

    VARIABLE        reduce using rule 55 (tipoDato -> BOOL .)
    COMA            reduce using rule 55 (tipoDato -> BOOL .)
    MAYORQUE        reduce using rule 55 (tipoDato -> BOOL .)


state 7

    (56) tipoDato -> DOUBLE .

    VARIABLE        reduce using rule 56 (tipoDato -> DOUBLE .)
    COMA            reduce using rule 56 (tipoDato -> DOUBLE .)
    MAYORQUE        reduce using rule 56 (tipoDato -> DOUBLE .)


state 8

    (57) tipoDato -> DYNAMIC .

    VARIABLE        reduce using rule 57 (tipoDato -> DYNAMIC .)
    COMA            reduce using rule 57 (tipoDato -> DYNAMIC .)
    MAYORQUE        reduce using rule 57 (tipoDato -> DYNAMIC .)


state 9

    (58) tipoDato -> VAR .

    VARIABLE        reduce using rule 58 (tipoDato -> VAR .)
    COMA            reduce using rule 58 (tipoDato -> VAR .)
    MAYORQUE        reduce using rule 58 (tipoDato -> VAR .)


state 10

    (1) funcion -> tipoDato VARIABLE . LPAREN parametros RPAREN LLAVEABRE bloque RETURN valores PUNTOCOMA LLAVECIERRA

    LPAREN          shift and go to state 12


state 11

    (2) funcion -> VOID VARIABLE . LPAREN parametros RPAREN LLAVEABRE bloque LLAVECIERRA
    (3) funcion -> VOID VARIABLE . LPAREN parametros RPAREN LLAVEABRE bloque RETURN PUNTOCOMA LLAVECIERRA

    LPAREN          shift and go to state 13


state 12

    (1) funcion -> tipoDato VARIABLE LPAREN . parametros RPAREN LLAVEABRE bloque RETURN valores PUNTOCOMA LLAVECIERRA
    (4) parametros -> . tipoDato VARIABLE
    (5) parametros -> . parametros COMA tipoDato VARIABLE
    (6) parametros -> . empty
    (53) tipoDato -> . STRING
    (54) tipoDato -> . INT
    (55) tipoDato -> . BOOL
    (56) tipoDato -> . DOUBLE
    (57) tipoDato -> . DYNAMIC
    (58) tipoDato -> . VAR
    (59) empty -> .

    STRING          shift and go to state 4
    INT             shift and go to state 5
    BOOL            shift and go to state 6
    DOUBLE          shift and go to state 7
    DYNAMIC         shift and go to state 8
    VAR             shift and go to state 9
    RPAREN          reduce using rule 59 (empty -> .)
    COMA            reduce using rule 59 (empty -> .)

    tipoDato                       shift and go to state 14
    parametros                     shift and go to state 15
    empty                          shift and go to state 16

state 13

    (2) funcion -> VOID VARIABLE LPAREN . parametros RPAREN LLAVEABRE bloque LLAVECIERRA
    (3) funcion -> VOID VARIABLE LPAREN . parametros RPAREN LLAVEABRE bloque RETURN PUNTOCOMA LLAVECIERRA
    (4) parametros -> . tipoDato VARIABLE
    (5) parametros -> . parametros COMA tipoDato VARIABLE
    (6) parametros -> . empty
    (53) tipoDato -> . STRING
    (54) tipoDato -> . INT
    (55) tipoDato -> . BOOL
    (56) tipoDato -> . DOUBLE
    (57) tipoDato -> . DYNAMIC
    (58) tipoDato -> . VAR
    (59) empty -> .

    STRING          shift and go to state 4
    INT             shift and go to state 5
    BOOL            shift and go to state 6
    DOUBLE          shift and go to state 7
    DYNAMIC         shift and go to state 8
    VAR             shift and go to state 9
    RPAREN          reduce using rule 59 (empty -> .)
    COMA            reduce using rule 59 (empty -> .)

    parametros                     shift and go to state 17
    tipoDato                       shift and go to state 14
    empty                          shift and go to state 16

state 14

    (4) parametros -> tipoDato . VARIABLE

    VARIABLE        shift and go to state 18


state 15

    (1) funcion -> tipoDato VARIABLE LPAREN parametros . RPAREN LLAVEABRE bloque RETURN valores PUNTOCOMA LLAVECIERRA
    (5) parametros -> parametros . COMA tipoDato VARIABLE

    RPAREN          shift and go to state 19
    COMA            shift and go to state 20


state 16

    (6) parametros -> empty .

    RPAREN          reduce using rule 6 (parametros -> empty .)
    COMA            reduce using rule 6 (parametros -> empty .)


state 17

    (2) funcion -> VOID VARIABLE LPAREN parametros . RPAREN LLAVEABRE bloque LLAVECIERRA
    (3) funcion -> VOID VARIABLE LPAREN parametros . RPAREN LLAVEABRE bloque RETURN PUNTOCOMA LLAVECIERRA
    (5) parametros -> parametros . COMA tipoDato VARIABLE

    RPAREN          shift and go to state 21
    COMA            shift and go to state 20


state 18

    (4) parametros -> tipoDato VARIABLE .

    RPAREN          reduce using rule 4 (parametros -> tipoDato VARIABLE .)
    COMA            reduce using rule 4 (parametros -> tipoDato VARIABLE .)


state 19

    (1) funcion -> tipoDato VARIABLE LPAREN parametros RPAREN . LLAVEABRE bloque RETURN valores PUNTOCOMA LLAVECIERRA

    LLAVEABRE       shift and go to state 22


state 20

    (5) parametros -> parametros COMA . tipoDato VARIABLE
    (53) tipoDato -> . STRING
    (54) tipoDato -> . INT
    (55) tipoDato -> . BOOL
    (56) tipoDato -> . DOUBLE
    (57) tipoDato -> . DYNAMIC
    (58) tipoDato -> . VAR

    STRING          shift and go to state 4
    INT             shift and go to state 5
    BOOL            shift and go to state 6
    DOUBLE          shift and go to state 7
    DYNAMIC         shift and go to state 8
    VAR             shift and go to state 9

    tipoDato                       shift and go to state 23

state 21

    (2) funcion -> VOID VARIABLE LPAREN parametros RPAREN . LLAVEABRE bloque LLAVECIERRA
    (3) funcion -> VOID VARIABLE LPAREN parametros RPAREN . LLAVEABRE bloque RETURN PUNTOCOMA LLAVECIERRA

    LLAVEABRE       shift and go to state 24


state 22

    (1) funcion -> tipoDato VARIABLE LPAREN parametros RPAREN LLAVEABRE . bloque RETURN valores PUNTOCOMA LLAVECIERRA
    (7) bloque -> . expresion
    (8) bloque -> . bloque expresion
    (9) bloque -> . empty
    (10) expresion -> . mapa PUNTOCOMA
    (11) expresion -> . mapaFunciones PUNTOCOMA
    (12) expresion -> . asignacion PUNTOCOMA
    (59) empty -> .
    (37) mapa -> . MAP MENORQUE tipoDato COMA tipoDato MAYORQUE VARIABLE IGUAL creacionMapa
    (38) mapa -> . mapaFunciones
    (39) mapaFunciones -> . mapa PUNTO VARIABLE LPAREN RPAREN
    (40) mapaFunciones -> . mapa PUNTO VARIABLE LPAREN valores
    (41) mapaFunciones -> . VARIABLE PUNTO VARIABLE LPAREN RPAREN
    (42) mapaFunciones -> . VARIABLE PUNTO VARIABLE LPAREN valores RPAREN
    (14) asignacion -> . VARIABLE operadores_asignacion valores
    (15) asignacion -> . tipoDato VARIABLE IGUAL valores
    (16) asignacion -> . VARIABLE IGUAL comparacion
    (17) asignacion -> . BOOL VARIABLE IGUAL comparacion
    (18) asignacion -> . VARIABLE operadores_asignacion operacion_aritmetica
    (19) asignacion -> . tipoDato VARIABLE IGUAL operacion_aritmetica
    (53) tipoDato -> . STRING
    (54) tipoDato -> . INT
    (55) tipoDato -> . BOOL
    (56) tipoDato -> . DOUBLE
    (57) tipoDato -> . DYNAMIC
    (58) tipoDato -> . VAR

  ! shift/reduce conflict for MAP resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for DYNAMIC resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
    RETURN          reduce using rule 59 (empty -> .)
    MAP             shift and go to state 33
    VARIABLE        shift and go to state 26
    BOOL            shift and go to state 34
    STRING          shift and go to state 4
    INT             shift and go to state 5
    DOUBLE          shift and go to state 7
    DYNAMIC         shift and go to state 8
    VAR             shift and go to state 9

  ! MAP             [ reduce using rule 59 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 59 (empty -> .) ]
  ! BOOL            [ reduce using rule 59 (empty -> .) ]
  ! STRING          [ reduce using rule 59 (empty -> .) ]
  ! INT             [ reduce using rule 59 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 59 (empty -> .) ]
  ! DYNAMIC         [ reduce using rule 59 (empty -> .) ]
  ! VAR             [ reduce using rule 59 (empty -> .) ]

    tipoDato                       shift and go to state 25
    bloque                         shift and go to state 27
    expresion                      shift and go to state 28
    empty                          shift and go to state 29
    mapa                           shift and go to state 30
    mapaFunciones                  shift and go to state 31
    asignacion                     shift and go to state 32

state 23

    (5) parametros -> parametros COMA tipoDato . VARIABLE

    VARIABLE        shift and go to state 35


state 24

    (2) funcion -> VOID VARIABLE LPAREN parametros RPAREN LLAVEABRE . bloque LLAVECIERRA
    (3) funcion -> VOID VARIABLE LPAREN parametros RPAREN LLAVEABRE . bloque RETURN PUNTOCOMA LLAVECIERRA
    (7) bloque -> . expresion
    (8) bloque -> . bloque expresion
    (9) bloque -> . empty
    (10) expresion -> . mapa PUNTOCOMA
    (11) expresion -> . mapaFunciones PUNTOCOMA
    (12) expresion -> . asignacion PUNTOCOMA
    (59) empty -> .
    (37) mapa -> . MAP MENORQUE tipoDato COMA tipoDato MAYORQUE VARIABLE IGUAL creacionMapa
    (38) mapa -> . mapaFunciones
    (39) mapaFunciones -> . mapa PUNTO VARIABLE LPAREN RPAREN
    (40) mapaFunciones -> . mapa PUNTO VARIABLE LPAREN valores
    (41) mapaFunciones -> . VARIABLE PUNTO VARIABLE LPAREN RPAREN
    (42) mapaFunciones -> . VARIABLE PUNTO VARIABLE LPAREN valores RPAREN
    (14) asignacion -> . VARIABLE operadores_asignacion valores
    (15) asignacion -> . tipoDato VARIABLE IGUAL valores
    (16) asignacion -> . VARIABLE IGUAL comparacion
    (17) asignacion -> . BOOL VARIABLE IGUAL comparacion
    (18) asignacion -> . VARIABLE operadores_asignacion operacion_aritmetica
    (19) asignacion -> . tipoDato VARIABLE IGUAL operacion_aritmetica
    (53) tipoDato -> . STRING
    (54) tipoDato -> . INT
    (55) tipoDato -> . BOOL
    (56) tipoDato -> . DOUBLE
    (57) tipoDato -> . DYNAMIC
    (58) tipoDato -> . VAR

  ! shift/reduce conflict for MAP resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for DYNAMIC resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
    LLAVECIERRA     reduce using rule 59 (empty -> .)
    RETURN          reduce using rule 59 (empty -> .)
    MAP             shift and go to state 33
    VARIABLE        shift and go to state 26
    BOOL            shift and go to state 34
    STRING          shift and go to state 4
    INT             shift and go to state 5
    DOUBLE          shift and go to state 7
    DYNAMIC         shift and go to state 8
    VAR             shift and go to state 9

  ! MAP             [ reduce using rule 59 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 59 (empty -> .) ]
  ! BOOL            [ reduce using rule 59 (empty -> .) ]
  ! STRING          [ reduce using rule 59 (empty -> .) ]
  ! INT             [ reduce using rule 59 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 59 (empty -> .) ]
  ! DYNAMIC         [ reduce using rule 59 (empty -> .) ]
  ! VAR             [ reduce using rule 59 (empty -> .) ]

    bloque                         shift and go to state 36
    expresion                      shift and go to state 28
    empty                          shift and go to state 29
    mapa                           shift and go to state 30
    mapaFunciones                  shift and go to state 31
    asignacion                     shift and go to state 32
    tipoDato                       shift and go to state 25

state 25

    (15) asignacion -> tipoDato . VARIABLE IGUAL valores
    (19) asignacion -> tipoDato . VARIABLE IGUAL operacion_aritmetica

    VARIABLE        shift and go to state 37


state 26

    (41) mapaFunciones -> VARIABLE . PUNTO VARIABLE LPAREN RPAREN
    (42) mapaFunciones -> VARIABLE . PUNTO VARIABLE LPAREN valores RPAREN
    (14) asignacion -> VARIABLE . operadores_asignacion valores
    (16) asignacion -> VARIABLE . IGUAL comparacion
    (18) asignacion -> VARIABLE . operadores_asignacion operacion_aritmetica
    (28) operadores_asignacion -> . IGUAL
    (29) operadores_asignacion -> . ASIGNACIONAUMENTADA
    (30) operadores_asignacion -> . ASIGNACIONDISMINUIDA

    PUNTO           shift and go to state 38
    IGUAL           shift and go to state 40
    ASIGNACIONAUMENTADA shift and go to state 41
    ASIGNACIONDISMINUIDA shift and go to state 42

    operadores_asignacion          shift and go to state 39

state 27

    (1) funcion -> tipoDato VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque . RETURN valores PUNTOCOMA LLAVECIERRA
    (8) bloque -> bloque . expresion
    (10) expresion -> . mapa PUNTOCOMA
    (11) expresion -> . mapaFunciones PUNTOCOMA
    (12) expresion -> . asignacion PUNTOCOMA
    (37) mapa -> . MAP MENORQUE tipoDato COMA tipoDato MAYORQUE VARIABLE IGUAL creacionMapa
    (38) mapa -> . mapaFunciones
    (39) mapaFunciones -> . mapa PUNTO VARIABLE LPAREN RPAREN
    (40) mapaFunciones -> . mapa PUNTO VARIABLE LPAREN valores
    (41) mapaFunciones -> . VARIABLE PUNTO VARIABLE LPAREN RPAREN
    (42) mapaFunciones -> . VARIABLE PUNTO VARIABLE LPAREN valores RPAREN
    (14) asignacion -> . VARIABLE operadores_asignacion valores
    (15) asignacion -> . tipoDato VARIABLE IGUAL valores
    (16) asignacion -> . VARIABLE IGUAL comparacion
    (17) asignacion -> . BOOL VARIABLE IGUAL comparacion
    (18) asignacion -> . VARIABLE operadores_asignacion operacion_aritmetica
    (19) asignacion -> . tipoDato VARIABLE IGUAL operacion_aritmetica
    (53) tipoDato -> . STRING
    (54) tipoDato -> . INT
    (55) tipoDato -> . BOOL
    (56) tipoDato -> . DOUBLE
    (57) tipoDato -> . DYNAMIC
    (58) tipoDato -> . VAR

    RETURN          shift and go to state 43
    MAP             shift and go to state 33
    VARIABLE        shift and go to state 26
    BOOL            shift and go to state 34
    STRING          shift and go to state 4
    INT             shift and go to state 5
    DOUBLE          shift and go to state 7
    DYNAMIC         shift and go to state 8
    VAR             shift and go to state 9

    tipoDato                       shift and go to state 25
    expresion                      shift and go to state 44
    mapa                           shift and go to state 30
    mapaFunciones                  shift and go to state 31
    asignacion                     shift and go to state 32

state 28

    (7) bloque -> expresion .

    RETURN          reduce using rule 7 (bloque -> expresion .)
    MAP             reduce using rule 7 (bloque -> expresion .)
    VARIABLE        reduce using rule 7 (bloque -> expresion .)
    BOOL            reduce using rule 7 (bloque -> expresion .)
    STRING          reduce using rule 7 (bloque -> expresion .)
    INT             reduce using rule 7 (bloque -> expresion .)
    DOUBLE          reduce using rule 7 (bloque -> expresion .)
    DYNAMIC         reduce using rule 7 (bloque -> expresion .)
    VAR             reduce using rule 7 (bloque -> expresion .)
    LLAVECIERRA     reduce using rule 7 (bloque -> expresion .)


state 29

    (9) bloque -> empty .

    RETURN          reduce using rule 9 (bloque -> empty .)
    MAP             reduce using rule 9 (bloque -> empty .)
    VARIABLE        reduce using rule 9 (bloque -> empty .)
    BOOL            reduce using rule 9 (bloque -> empty .)
    STRING          reduce using rule 9 (bloque -> empty .)
    INT             reduce using rule 9 (bloque -> empty .)
    DOUBLE          reduce using rule 9 (bloque -> empty .)
    DYNAMIC         reduce using rule 9 (bloque -> empty .)
    VAR             reduce using rule 9 (bloque -> empty .)
    LLAVECIERRA     reduce using rule 9 (bloque -> empty .)


state 30

    (10) expresion -> mapa . PUNTOCOMA
    (39) mapaFunciones -> mapa . PUNTO VARIABLE LPAREN RPAREN
    (40) mapaFunciones -> mapa . PUNTO VARIABLE LPAREN valores

    PUNTOCOMA       shift and go to state 45
    PUNTO           shift and go to state 46


state 31

    (11) expresion -> mapaFunciones . PUNTOCOMA
    (38) mapa -> mapaFunciones .

  ! shift/reduce conflict for PUNTOCOMA resolved as shift
    PUNTOCOMA       shift and go to state 47
    PUNTO           reduce using rule 38 (mapa -> mapaFunciones .)

  ! PUNTOCOMA       [ reduce using rule 38 (mapa -> mapaFunciones .) ]


state 32

    (12) expresion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 48


state 33

    (37) mapa -> MAP . MENORQUE tipoDato COMA tipoDato MAYORQUE VARIABLE IGUAL creacionMapa

    MENORQUE        shift and go to state 49


state 34

    (17) asignacion -> BOOL . VARIABLE IGUAL comparacion
    (55) tipoDato -> BOOL .

  ! shift/reduce conflict for VARIABLE resolved as shift
    VARIABLE        shift and go to state 50

  ! VARIABLE        [ reduce using rule 55 (tipoDato -> BOOL .) ]


state 35

    (5) parametros -> parametros COMA tipoDato VARIABLE .

    RPAREN          reduce using rule 5 (parametros -> parametros COMA tipoDato VARIABLE .)
    COMA            reduce using rule 5 (parametros -> parametros COMA tipoDato VARIABLE .)


state 36

    (2) funcion -> VOID VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque . LLAVECIERRA
    (3) funcion -> VOID VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque . RETURN PUNTOCOMA LLAVECIERRA
    (8) bloque -> bloque . expresion
    (10) expresion -> . mapa PUNTOCOMA
    (11) expresion -> . mapaFunciones PUNTOCOMA
    (12) expresion -> . asignacion PUNTOCOMA
    (37) mapa -> . MAP MENORQUE tipoDato COMA tipoDato MAYORQUE VARIABLE IGUAL creacionMapa
    (38) mapa -> . mapaFunciones
    (39) mapaFunciones -> . mapa PUNTO VARIABLE LPAREN RPAREN
    (40) mapaFunciones -> . mapa PUNTO VARIABLE LPAREN valores
    (41) mapaFunciones -> . VARIABLE PUNTO VARIABLE LPAREN RPAREN
    (42) mapaFunciones -> . VARIABLE PUNTO VARIABLE LPAREN valores RPAREN
    (14) asignacion -> . VARIABLE operadores_asignacion valores
    (15) asignacion -> . tipoDato VARIABLE IGUAL valores
    (16) asignacion -> . VARIABLE IGUAL comparacion
    (17) asignacion -> . BOOL VARIABLE IGUAL comparacion
    (18) asignacion -> . VARIABLE operadores_asignacion operacion_aritmetica
    (19) asignacion -> . tipoDato VARIABLE IGUAL operacion_aritmetica
    (53) tipoDato -> . STRING
    (54) tipoDato -> . INT
    (55) tipoDato -> . BOOL
    (56) tipoDato -> . DOUBLE
    (57) tipoDato -> . DYNAMIC
    (58) tipoDato -> . VAR

    LLAVECIERRA     shift and go to state 51
    RETURN          shift and go to state 52
    MAP             shift and go to state 33
    VARIABLE        shift and go to state 26
    BOOL            shift and go to state 34
    STRING          shift and go to state 4
    INT             shift and go to state 5
    DOUBLE          shift and go to state 7
    DYNAMIC         shift and go to state 8
    VAR             shift and go to state 9

    expresion                      shift and go to state 44
    mapa                           shift and go to state 30
    mapaFunciones                  shift and go to state 31
    asignacion                     shift and go to state 32
    tipoDato                       shift and go to state 25

state 37

    (15) asignacion -> tipoDato VARIABLE . IGUAL valores
    (19) asignacion -> tipoDato VARIABLE . IGUAL operacion_aritmetica

    IGUAL           shift and go to state 53


state 38

    (41) mapaFunciones -> VARIABLE PUNTO . VARIABLE LPAREN RPAREN
    (42) mapaFunciones -> VARIABLE PUNTO . VARIABLE LPAREN valores RPAREN

    VARIABLE        shift and go to state 54


state 39

    (14) asignacion -> VARIABLE operadores_asignacion . valores
    (18) asignacion -> VARIABLE operadores_asignacion . operacion_aritmetica
    (47) valores -> . VARIABLE
    (48) valores -> . NUMERO
    (49) valores -> . CADENA
    (50) valores -> . booleano
    (20) operacion_aritmetica -> . valores operadores_aritmeticos valores
    (21) operacion_aritmetica -> . operacion_aritmetica operadores_aritmeticos valores
    (51) booleano -> . TRUE
    (52) booleano -> . FALSE

    VARIABLE        shift and go to state 55
    NUMERO          shift and go to state 58
    CADENA          shift and go to state 59
    TRUE            shift and go to state 61
    FALSE           shift and go to state 62

    valores                        shift and go to state 56
    operacion_aritmetica           shift and go to state 57
    booleano                       shift and go to state 60

state 40

    (16) asignacion -> VARIABLE IGUAL . comparacion
    (28) operadores_asignacion -> IGUAL .
    (31) comparacion -> . valores comparador valores
    (32) comparacion -> . comparacion comparador valores
    (47) valores -> . VARIABLE
    (48) valores -> . NUMERO
    (49) valores -> . CADENA
    (50) valores -> . booleano
    (51) booleano -> . TRUE
    (52) booleano -> . FALSE

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for NUMERO resolved as shift
  ! shift/reduce conflict for CADENA resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    VARIABLE        shift and go to state 55
    NUMERO          shift and go to state 58
    CADENA          shift and go to state 59
    TRUE            shift and go to state 61
    FALSE           shift and go to state 62

  ! VARIABLE        [ reduce using rule 28 (operadores_asignacion -> IGUAL .) ]
  ! NUMERO          [ reduce using rule 28 (operadores_asignacion -> IGUAL .) ]
  ! CADENA          [ reduce using rule 28 (operadores_asignacion -> IGUAL .) ]
  ! TRUE            [ reduce using rule 28 (operadores_asignacion -> IGUAL .) ]
  ! FALSE           [ reduce using rule 28 (operadores_asignacion -> IGUAL .) ]

    comparacion                    shift and go to state 63
    valores                        shift and go to state 64
    booleano                       shift and go to state 60

state 41

    (29) operadores_asignacion -> ASIGNACIONAUMENTADA .

    VARIABLE        reduce using rule 29 (operadores_asignacion -> ASIGNACIONAUMENTADA .)
    NUMERO          reduce using rule 29 (operadores_asignacion -> ASIGNACIONAUMENTADA .)
    CADENA          reduce using rule 29 (operadores_asignacion -> ASIGNACIONAUMENTADA .)
    TRUE            reduce using rule 29 (operadores_asignacion -> ASIGNACIONAUMENTADA .)
    FALSE           reduce using rule 29 (operadores_asignacion -> ASIGNACIONAUMENTADA .)


state 42

    (30) operadores_asignacion -> ASIGNACIONDISMINUIDA .

    VARIABLE        reduce using rule 30 (operadores_asignacion -> ASIGNACIONDISMINUIDA .)
    NUMERO          reduce using rule 30 (operadores_asignacion -> ASIGNACIONDISMINUIDA .)
    CADENA          reduce using rule 30 (operadores_asignacion -> ASIGNACIONDISMINUIDA .)
    TRUE            reduce using rule 30 (operadores_asignacion -> ASIGNACIONDISMINUIDA .)
    FALSE           reduce using rule 30 (operadores_asignacion -> ASIGNACIONDISMINUIDA .)


state 43

    (1) funcion -> tipoDato VARIABLE LPAREN parametros RPAREN LLAVEABRE bloque RETURN . valores PUNTOCOMA LLAVECIERRA
    (47) valores -> . VARIABLE
    (48) valores -> . NUMERO
    (49) valores -> . CADENA
    (50) valores -> . booleano
    (51) booleano -> . TRUE
    (52) booleano -> . FALSE
